Refactored - added final to some statements, added package-info.java, fixed linting errors, made initialization explicit, fixed when code violated Law of Demeter, extracted duplicate strings to constants,removed unnecessarily qualified static access, removed Unnecessary 'value =' in annotation.